# writableopenapi

./: .gitignore  AUTHORS  CHANGELOG.md  CONTRIBUTORS  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
doc/: 404.html  index.html  robots.txt  sitemap.xml
doc/css/: prism.css  style.css
doc/js/: prism.js
tools/common/: install_addlicense.sh  licenses.sh  licenses_dry.sh
tools/py/: fmt.sh  fmt_dry.sh
writableopenapi/: __init__.py  openapi.py  utils.py
writableopenapi/ast/: __init__.py  any.py  array.py  boolean.py  enum.py  null.py  number.py  object.py  string.py
writableopenapi/ast/kinds/: kind.py  unions.py
writableopenapi/macros/: __init__.py  into.py  logicals.py  logics.py  shared.py  types.py
writableopenapi/openapi/: __init__.py  callback.py  components.py  contact.py  discriminator.py  encoding.py  example.py  external_documentation.py  header.py  info.py  license.py  link.py  media_type.py  oauth_flow.py  oauth_flows.py  openapi.py  operation.py  parameter.py  path_item.py  paths.py  reference.py  request_body.py  response.py  responses.py  schema.py  security_requirement.py  security_scheme.py  server.py  server_variable.py  specification_extension.py  tag.py  v3_1.py  xml.py
writableopenapitests/: api_test.py  openapi.json  openapi.yaml
